// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hrJYol sc-jTwxVy jRbBos"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fKqrK"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 kjmWPw"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jAWuzL"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dydTGA"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 giPNPf fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvYgSq"
              />
              <span
                class="StyledText-sc-1sadyjn-0 KXOWt"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cNFWHN"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-ofa7kd-0 iMQOFA"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                  transform="matrix(1 0 0 -1 0 24)"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kUTqHn"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kUTqHn Collapsible__AnimatedBox-sc-15kniua-0 bbJFop"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fQRska"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hrJYol sc-jTwxVy jRbBos"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fKqrK"
      >
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButtonKind-sc-1vhfpnt-0 kjmWPw"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jAWuzL"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dydTGA"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 giPNPf fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvYgSq"
              />
              <span
                class="StyledText-sc-1sadyjn-0 KXOWt"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cNFWHN"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 iMQOFA"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kUTqHn"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 kUTqHn Collapsible__AnimatedBox-sc-15kniua-0 yEhzs"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
